# budget-app

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  start_backend.sh  test_api.py
alembic/: README.md  env.py
alembic/versions/: 20260401_0001_initial_schema.py
app/: database.py  main.py  models.py  schemas.py
app/core/: config.py  deps.py  security.py
app/crud/: user.py
app/routes/: auth.py  summary.py  transactions.py
budget-frontend/: package-lock.json  package.json
budget-frontend/app/: globals.css  layout.tsx  page.tsx
budget-frontend/app/components/: Layout.tsx  Navbar.tsx  README.md
budget-frontend/app/dashboard/: page.tsx
budget-frontend/app/lib/: README.md  api.ts  auth.ts  categories.ts
budget-frontend/app/login/: page.tsx
budget-frontend/app/register/: page.tsx
budget-frontend/app/transactions/: page.tsx
scripts/: test_token.py
tests/: __init__.py  conftest.py  test_auth.py  test_summary.py  test_transactions.py
